# cpp-feishu-im-microservice

./: .gitignore  README.md
code/client/ChatClient/: CMakeLists.txt  main.cpp
code/client/ChatClient/model/: data.h
code/server/: CMakeLists.txt
code/server/common/: asr.hpp  channel.hpp  data_es.hpp  data_mysql.hpp  data_redis.hpp  dms.hpp  etcd.hpp  icsearch.hpp  logger.hpp  mysql.hpp  mysql_chat_session.hpp  mysql_chat_session_member.hpp  mysql_friend_apply.hpp  mysql_message.hpp  mysql_relation.hpp  mysql_user.hpp  rabbitmq.hpp  utils.hpp
code/server/file/: CMakeLists.txt
code/server/file/source/: file_server.cc  file_server.hpp
code/server/file/test/: file_client.cc
code/server/friend/: CMakeLists.txt
code/server/friend/source/: friend_server.cc  friend_server.hpp
code/server/friend/test/: frend_client.cc
code/server/friend/test/mysql_test/: main.cc  makefile
code/server/gateway/: CMakeLists.txt
code/server/gateway/source/: connection.hpp  gateway_server.cc  gateway_server.hpp
code/server/message/: CMakeLists.txt
code/server/message/source/: message_server.cc  message_server.hpp
code/server/message/test/: message_client.cc
code/server/message/test/es_test/: main.cc  makefile
code/server/message/test/mysql_test/: main.cc  makefile
code/server/odb/: chat_session.hxx  chat_session_member.hxx  friend_apply.hxx  message.hxx  relation.hxx  user.hxx
code/server/proto/: base.proto  file.proto  friend.proto  gateway.proto  message.proto  notify.proto  speech.proto  transmite.proto  user.proto
code/server/speech/: CMakeLists.txt
code/server/speech/source/: speech_server.cc  speech_server.hpp
code/server/speech/test/: speech_client.cc
code/server/third/include/aip-cpp-sdk/base/: utils.h
code/server/transmite/: CMakeLists.txt
code/server/transmite/source/: transmite_server.cc  transmite_server.hpp
code/server/transmite/test/: transmite_client.cc
code/server/transmite/test/mysql_test/: main.cc  makefile
code/server/user/: CMakeLists.txt
code/server/user/source/: user_server.cc  user_server.hpp
code/server/user/test/: user_client.cc
code/server/user/test/es_test/: main.cc
code/server/user/test/mysql_test/: main.cc  makefile
code/server/user/test/redis_test/: main.cc
example/AMQP-CPP/: consume.cc  makefile  publish.cc  rabbitmq_consume.cc  rabbitmq_publish.cc
example/cmake/: CMakeLists.txt
example/common/: asr.hpp  dms.hpp  rabbitmq.hpp
example/dms/: dms_test.cc  main.cc  makefile
example/odb/cmake_test/: CMakeLists.txt
example/odb/cmake_test/test1/: CMakeLists.txt
example/odb/cmake_test/test2/: CMakeLists.txt
example/speech/: asr_test  asr_test.cc  makefile
example/speech/test/: asrmain.c  makefile
