# 1.添加cmake版本说明
cmake_minimum_required(VERSION 3.28.3) 

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")

# 2.声明工程名称
project(transmite_server)
set(target "transmite_server")
# 3.检测并生成ODB框架代码
#   1.添加所需的ODB映射代码的文件名称
set(proto_path ${CMAKE_CURRENT_SOURCE_DIR}/../proto)
set(proto_files user.proto base.proto transmite.proto)
#   2.检测框架代码文件是否已经生成
set(proto_hh "")
set(proto_cc "")
set(proto_srcs "")
foreach(proto_file IN LISTS proto_files)
    string(REPLACE ".proto" ".pb.h" proto_hh ${proto_file})
    string(REPLACE ".proto" ".pb.cc" proto_cc ${proto_file})
    if(NOT EXISTS ${CMAKE_CURRENT_BINARY_DIR}/${proto_cc})
#   3.如果没有生成，则预定义生成指令 -- 用于在构建项目之间先生成框架代码
        add_custom_command(
                            PRE_BUILD      
                            COMMAND       protoc      
                            ARGS          --cpp_out=${CMAKE_CURRENT_BINARY_DIR} --experimental_allow_proto3_optional -I ${proto_path} ${proto_path}/${proto_file} 
                            DEPENDS       ${proto_path}/${proto_file}         
                            OUTPUT        ${CMAKE_CURRENT_BINARY_DIR}/${proto_cc}     
                            COMMENT       "生成Protobuf框架代码文件:${CMAKE_CURRENT_BINARY_DIR}/${proto_cc}"    
                        )
    endif()
#   4.将所有生成的框架源码文件名保存起来
    list(APPEND proto_srcs ${CMAKE_CURRENT_BINARY_DIR}/${proto_cc})
endforeach()

set(odb_path ${CMAKE_CURRENT_SOURCE_DIR}/../odb)
set(odb_files chat_session_member.hxx user.hxx)
#   2.检测框架代码文件是否已经生成
set(odb_hxx "")
set(odb_cxx "")
set(odb_srcs "")
foreach(odb_file IN LISTS odb_files)
    string(REPLACE ".hxx" "-odb.hxx" odb_hxx ${odb_file})
    string(REPLACE ".hxx" "-odb.cxx" odb_cxx ${odb_file})
    if(NOT EXISTS ${CMAKE_CURRENT_BINARY_DIR}/${odb_cxx})
#   3.如果没有生成，则预定义生成指令 -- 用于在构建项目之间先生成框架代码
        add_custom_command(
                            PRE_BUILD      
                            COMMAND       odb      
                            ARGS          -d mysql --std c++11  --generate-query --generate-schema --profile boost/date-time  ${odb_path}/${odb_file} 
                            DEPENDS       ${odb_path}/${odb_file}         
                            OUTPUT        ${CMAKE_CURRENT_BINARY_DIR}/${odb_cxx}     
                            COMMENT       "生成ODB框架代码文件:${CMAKE_CURRENT_BINARY_DIR}/${odb_cxx}"    
                        )
    endif()
#   4.将所有生成的框架源码文件名保存起来
    list(APPEND odb_srcs ${CMAKE_CURRENT_BINARY_DIR}/${odb_cxx})
endforeach()



# 4.获取源码目录下的所有源码文件
set(src_files "")
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/source src_files)
# 5.声明目标及依赖
add_executable(${target} ${src_files} ${proto_srcs} ${odb_srcs})
target_link_libraries(${target} -lgflags -lspdlog -lfmt -lbrpc -lleveldb  -lssl -lcrypto -lprotobuf -letcd-cpp-api -lcpprest -lodb-mysql -lodb -lodb-boost  -lamqpcpp -lev  )


set(test_client "transmite_client")
set(test_files "")
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/test test_files)
add_executable(${test_client} ${test_files} ${proto_srcs})
target_link_libraries(${test_client} -lgflags -lspdlog -lfmt -lcurl -lbrpc -lleveldb  -lssl -lcrypto -lprotobuf -letcd-cpp-api -lcpprest -lgtest)


# 6.设置头文件默认搜索路径
include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../common)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../odb)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../third/include)
# 7.设置需要连接的库
# 8.设置安装路径
INSTALL(TARGETS ${target} RUNTIME DESTINATION bin)